[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fbi-api"
version = "1.1.0"
description = "A Python wrapper around the FBI API (unofficial)"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["crime-data", "fbi", "most-wanted", "fbi-project", "fbi-crime-api", "wanted-persons"]
authors = [{name = "Richard Mwewa", email = "rly0nheart@duck.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  ""
]

dependencies = [
  "requests"
]

[tool.setuptools]
packages = ["fbi"]

[project.urls]
homepage = "https://github.com/rly0nheart/fbi-api"
documentation = "https://github.com/rly0nheart/fbi-api/wiki"
repository = "https://github.com/rly0nheart/fbi-api.git"
